bat.bool1.diff21.Diff21.scala.error
Erreur de compilation :
Diff21:5: error: not found: value abs
    return abs(21-n)*2
           ^